--- a/admin/css/mwb-admin.css
+++ b/admin/css/mwb-admin.css
@@ -14,33 +14,29 @@
 =            Typography Variable and Declaration            =
 ============================================================*/
 @font-face {
-  font-family: 'NunitoSans-ExtraBold';
+  font-family: "NunitoSans-ExtraBold";
   src: url("../fonts/nunito-sans/NunitoSans-ExtraBold.ttf");
   font-style: bold;
   font-display: swap;
 }
-
 @font-face {
-  font-family: 'NunitoSans-SemiBold';
+  font-family: "NunitoSans-SemiBold";
   src: url("../fonts/nunito-sans/NunitoSans-SemiBold.ttf");
   font-style: bold;
   font-display: swap;
 }
-
 @font-face {
-  font-family: 'NunitoSans-Bold';
+  font-family: "NunitoSans-Bold";
   src: url("../fonts/nunito-sans/NunitoSans-Bold.ttf");
   font-style: bold;
   font-display: swap;
 }
-
 @font-face {
-  font-family: 'NunitoSans-Regular';
+  font-family: "NunitoSans-Regular";
   src: url("../fonts/nunito-sans/NunitoSans-Regular.ttf");
   font-style: normal;
   font-display: swap;
 }
-
 /*----------  Font Family Variable  ----------*/
 /*----------  Font Size Variable  ----------*/
 /*=====  End of Typography Variable and Declaration  ======*/
@@ -94,22 +90,22 @@ ul {
   margin: 0;
 }
 
-input[type="checkbox"]:focus,
-input[type="color"]:focus,
-input[type="date"]:focus,
-input[type="datetime-local"]:focus,
-input[type="datetime"]:focus,
-input[type="email"]:focus,
-input[type="month"]:focus,
-input[type="number"]:focus,
-input[type="password"]:focus,
-input[type="radio"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="text"]:focus,
-input[type="time"]:focus,
-input[type="url"]:focus,
-input[type="week"]:focus,
+input[type=checkbox]:focus,
+input[type=color]:focus,
+input[type=date]:focus,
+input[type=datetime-local]:focus,
+input[type=datetime]:focus,
+input[type=email]:focus,
+input[type=month]:focus,
+input[type=number]:focus,
+input[type=password]:focus,
+input[type=radio]:focus,
+input[type=search]:focus,
+input[type=tel]:focus,
+input[type=text]:focus,
+input[type=time]:focus,
+input[type=url]:focus,
+input[type=week]:focus,
 select:focus,
 textarea:focus {
   box-shadow: none !important;
@@ -149,16 +145,13 @@ select {
   display: inline-block;
   transition: 0.3s ease;
 }
-
 .mwb-link:hover {
   color: #2196f3 !important;
 }
-
 .mwb-link.active {
   position: relative;
   color: #2196f3 !important;
 }
-
 .mwb-link:after {
   content: "";
   position: absolute;
@@ -196,7 +189,6 @@ select {
   margin-bottom: 8px;
   margin-right: 15px;
 }
-
 .mwb-header-container .mwb-header-title {
   font-family: "NunitoSans-ExtraBold";
   font-style: normal;
@@ -214,35 +206,29 @@ select {
   flex-wrap: wrap;
   margin: 0 -15px 35px;
 }
-
 .mwb-form-group .mwb-form-group__label {
   flex: 0 0 100%;
   max-width: 200px;
   padding: 0 15px;
 }
-
 .mwb-form-group .mwb-form-group__label .mwb-form-label {
   font-family: "NunitoSans-SemiBold";
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.3px;
 }
-
 .mwb-form-group .mwb-form-group__control {
   flex: 0 0 100%;
   max-width: calc(100% - 200px);
   padding: 0 15px;
 }
-
 .mwb-form-group .mwb-form-group__control .mwb-form-select:hover select {
   border-color: rgba(0, 0, 0, 0.87) !important;
   color: rgba(0, 0, 0, 0.87);
 }
-
 .mwb-form-group .mwb-form-group__control .mwb-form-select:focus select {
   border-color: #2196f3 !important;
 }
-
 .mwb-form-group .mwb-form-group__control .mwb-form-select .mdl-textfield__label {
   display: block;
   max-width: 450px;
@@ -253,7 +239,6 @@ select {
   width: 68px;
   height: 48px;
 }
-
 .mwb-form-group .mwb-password-hidden {
   outline: none;
   opacity: 0.7;
@@ -263,7 +248,6 @@ select {
       -ms-user-select: none;
           user-select: none;
 }
-
 .mwb-form-group .mwb-password-hidden:hover {
   opacity: 1;
 }
@@ -309,7 +293,6 @@ select {
 #admin-hooks-listing {
   width: 100%;
 }
-
 #mwb-wrael-table-inner-container table thead th,
 #public-hooks-listing table thead th,
 #admin-hooks-listing table thead th {
@@ -333,7 +316,6 @@ select {
   text-align: center;
   text-transform: capitalize;
 }
-
 .mwb-btn:hover, .mwb-btn:active, .mwb-btn:focus {
   color: #ffffff;
 }
@@ -352,25 +334,21 @@ select {
 .mwb-overview__wrapper {
   width: calc(100% - 20px);
 }
-
 .mwb-overview__wrapper .mwb-overview__banner {
   background-color: #ffffff;
   margin: 10px 0 25px;
   overflow: hidden;
   padding: 10px;
 }
-
 .mwb-overview__wrapper .mwb-overview__banner img {
   width: 100%;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__content-description {
   background-color: #ffffff;
   margin-bottom: 30px;
   padding: 25px 0;
   text-align: left;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__content-description h2 {
   color: #163062;
   font-size: 30px;
@@ -380,13 +358,11 @@ select {
   margin: 10px 0px;
   text-align: left;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__content-description p {
   color: #565857;
   font-size: 16px;
   letter-spacing: 0.5px;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__content-description h3 {
   color: #163062;
   font-size: 18px;
@@ -395,18 +371,15 @@ select {
   margin-bottom: 15px;
   margin-top: 25px;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__content-description .mwb-overview__features {
   list-style: none;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__content-description .mwb-overview__features li {
   color: #565857;
   font-size: 16px;
   letter-spacing: 0.5px;
   line-height: 24px;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__content-description .mwb-overview__features li:before {
   color: #1a3365;
   content: "⚬";
@@ -414,7 +387,6 @@ select {
   font-weight: 400;
   vertical-align: middle;
 }
-
 .mwb-overview__wrapper .mwb-overview__content h2 {
   color: #163062;
   font-size: 30px;
@@ -425,13 +397,11 @@ select {
   margin: 10px 0px;
   text-align: left;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords {
   display: flex;
   flex-wrap: wrap;
   margin: 0 -15px;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords .mwb-overview__keywords-item {
   display: flex;
   flex-wrap: wrap;
@@ -440,7 +410,6 @@ select {
   max-width: 33.33%;
   padding: 0 15px;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords .mwb-overview__keywords-item .mwb-overview__keywords-card {
   background-color: #ffffff;
   border-radius: 10px;
@@ -450,18 +419,15 @@ select {
   flex-grow: 1;
   padding: 30px;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords .mwb-overview__keywords-item .mwb-overview__keywords-card .mwb-overview__keywords-image {
   overflow: hidden;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords .mwb-overview__keywords-item .mwb-overview__keywords-card .mwb-overview__keywords-image img {
   max-width: 80px;
   -o-object-fit: cover;
      object-fit: cover;
   width: auto;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords .mwb-overview__keywords-item .mwb-overview__keywords-card .mwb-overview__keywords-text .mwb-overview__keywords-heading {
   color: #163062;
   font-size: 28px;
@@ -470,7 +436,6 @@ select {
   line-height: 38px;
   margin: 15px 0;
 }
-
 .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords .mwb-overview__keywords-item .mwb-overview__keywords-card .mwb-overview__keywords-text .mwb-overview__keywords-description {
   color: #565857;
   font-size: 16px;
@@ -485,17 +450,14 @@ select {
   padding: 0 32px;
   border-bottom: 1px solid rgba(63, 71, 86, 0.25);
 }
-
 .mwb-navbar .mwb-navbar__items {
   display: flex;
   flex-wrap: wrap;
 }
-
 .mwb-navbar .mwb-navbar__items li {
   margin-right: 32px;
   margin-bottom: 0;
 }
-
 .mwb-navbar .mwb-navbar__items li a {
   padding: 18px 0;
   color: #000000;
@@ -513,43 +475,36 @@ select {
   max-width: 600px;
   padding: 10px 20px;
 }
-
 .mwb-wrael-wrap h2 {
   color: #163062;
   font-size: 24px;
   font-weight: 600;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   line-height: 150%;
   margin: 10px 0;
   text-align: left;
 }
-
 .mwb-wrael-wrap .mwb_rma_license_text > p {
   margin: 10px 0;
 }
-
 .mwb-wrael-wrap .mwb_rma_license_text #mwb_rma_license_form .mwb-wrael-form-table input#mwb_rma_license_key {
   width: 100%;
   transition: 0.3s ease;
   height: 50px;
   font-size: 14px;
 }
-
 .mwb-wrael-wrap .mwb_rma_license_text #mwb_rma_license_form .mwb-wrael-form-table input#mwb_rma_license_key:hover {
   border-color: #000000;
 }
-
 .mwb-wrael-wrap .mwb_rma_license_text #mwb_rma_license_form .mwb-wrael-form-table input#mwb_rma_license_key:focus {
   border-color: #2196f3;
   outline: none;
   box-shadow: none;
 }
-
 .mwb-wrael-wrap .mwb_rma_license_text #mwb_rma_license_form #mwb_rma_license_activation_status {
   padding: 0 10px;
   font-weight: 600;
 }
-
 .mwb-wrael-wrap .mwb_rma_license_text #mwb_rma_license_form button {
   background-color: #163062;
   text-transform: uppercase;
@@ -560,12 +515,10 @@ select {
   transition: 0.5s ease;
   font-weight: 600;
 }
-
 .mwb-wrael-wrap .mwb_rma_license_text #mwb_rma_license_form button:hover {
   color: #163062;
   background-color: #ffffff;
 }
-
 .mwb-wrael-wrap .mwb_rma_license_text #mwb_rma_license_form button:focus {
   outline: none;
   box-shadow: none;
@@ -578,15 +531,12 @@ select {
 .dataTables_wrapper {
   padding: 20px 10px;
 }
-
 .dataTables_wrapper .dataTable {
   border-bottom: 1px solid rgba(33, 33, 33, 0.08) !important;
 }
-
 .dataTables_wrapper .dataTable thead {
   text-align: left;
 }
-
 .dataTables_wrapper .dataTable thead th {
   border-bottom: 1px solid rgba(33, 33, 33, 0.08);
   padding: 15px;
@@ -596,25 +546,20 @@ select {
   line-height: 24px;
   letter-spacing: 0.25px;
 }
-
 .dataTables_wrapper .dataTable tr {
   background-color: #ffffff !important;
 }
-
 .dataTables_wrapper .dataTable tr td {
   background-color: #ffffff !important;
 }
-
 .dataTables_wrapper .mwb-dt-buttons {
   display: flex;
   align-items: center;
   justify-content: flex-end;
 }
-
 .dataTables_wrapper .mwb-dt-buttons .dt-buttons {
   margin: 0 10px;
 }
-
 .dataTables_wrapper .mwb-dt-buttons .dt-buttons .dt-button {
   padding: 5px 10px;
   border: 1px solid #c7c7c7;
@@ -622,19 +567,16 @@ select {
   transition: 0.5s ease;
   border-radius: 2px;
 }
-
 .dataTables_wrapper .mwb-dt-buttons .dt-buttons .dt-button:hover {
   cursor: pointer;
   background: #EFEFEF;
 }
-
 .dataTables_wrapper .bottom {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
   margin: 10px 0;
 }
-
 .dataTables_wrapper .bottom .dataTables_length {
   font-family: "NunitoSans-SemiBold";
   font-size: 14px;
@@ -642,13 +584,11 @@ select {
   letter-spacing: 0.25px;
   margin-right: 14px;
 }
-
 .dataTables_wrapper .bottom .dataTables_length select {
   margin: 0 25px;
   min-width: 90px;
   padding: 5px 30px 5px 15px !important;
 }
-
 .dataTables_wrapper .bottom .dataTables_info {
   font-family: "NunitoSans-SemiBold";
   font-size: 14px;
@@ -656,25 +596,161 @@ select {
   letter-spacing: 0.25px;
   margin-right: 5px;
 }
-
 .dataTables_wrapper .bottom .dataTables_paginate {
   padding: 0;
 }
-
 .dataTables_wrapper .bottom .dataTables_paginate span .paginate_button {
   display: none !important;
 }
-
 .dataTables_wrapper .bottom .dataTables_paginate .paginate_button {
   display: inline-block;
 }
-
 .dataTables_wrapper .bottom .dataTables_paginate .paginate_button:hover {
   background: #f4f4f4 !important;
   cursor: pointer !important;
 }
 
 /*=====  End of DataTables  ======*/
+#add_more_rma_policies_clone {
+  display: none;
+}
+
+/*mwb form group breaker css*/
+.mwb-form-group__breaker {
+  padding: 15px 0 15px 30px;
+  background-color: #e5f4fe;
+  margin-left: -32px;
+  margin-right: -32px;
+  color: #2196f3;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+
+/*save_policies_setting_form*/
+#save_policies_setting_form select,
+#save_policies_setting_form input {
+  margin-left: 0;
+}
+
+#save_policies_setting_form input[type=date],
+#save_policies_setting_form input[type=datetime-local],
+#save_policies_setting_form input[type=datetime],
+#save_policies_setting_form input[type=email],
+#save_policies_setting_form input[type=month],
+#save_policies_setting_form input[type=number],
+#save_policies_setting_form input[type=password],
+#save_policies_setting_form input[type=search],
+#save_policies_setting_form input[type=tel],
+#save_policies_setting_form input[type=text],
+#save_policies_setting_form input[type=time],
+#save_policies_setting_form input[type=url],
+#save_policies_setting_form input[type=week] {
+  padding: 10px 15px 10px 15px;
+  max-height: 50px;
+}
+
+#save_policies_setting_form select {
+  min-height: 50px;
+  max-height: 50px;
+}
+
+#save_policies_setting_form .add_more_rma_policies {
+  padding-bottom: 20px;
+}
+
+#save_policies_setting_form .add_more_rma_policies:last-child {
+  padding-bottom: 0;
+}
+
+.add_more_rma_policies select,
+.add_more_rma_policies label,
+.add_more_rma_policies input,
+.add_more_rma_policies select + span {
+  margin-right: 30px;
+}
+
+.admin-bar #save_policies_setting_form #mwb_rma_add_more,
+.admin-bar #save_policies_setting_form .mwb_rma_save_settings {
+  font-size: 14px;
+  padding: 16px 25px;
+  display: inline-block;
+  border-radius: 100px;
+  background: #2196F3;
+  color: #ffffff;
+  border: none;
+  text-transform: uppercase;
+  letter-spacing: 0.25px;
+  line-height: 16px;
+}
+
+.admin-bar #save_policies_setting_form input.mwb_rma_save_settings {
+  margin-left: 10px;
+}
+
+.admin-bar #save_policies_setting_form .mwb_rma_policy_condition {
+  min-width: 180px;
+}
+
+.admin-bar #save_policies_setting_form input.rma_policy_delete {
+  background-color: transparent;
+  border: 1px solid;
+  border-color: rgba(0, 0, 0, 0.38);
+  border-radius: 3px;
+}
+
+#save_policies_setting_form .select2-selection--multiple input[type=search] {
+  padding: 0;
+}
+
+#save_policies_setting_form .select2-container .select2-selection--multiple {
+  min-height: 50px;
+}
+
+#save_policies_setting_form input.mwb_rma_max_number_days,
+#save_policies_setting_form .mwb_rma_tax_handling,
+#save_policies_setting_form .select2.select2-container.select2-container--default {
+  max-width: 180px;
+  min-width: 180px;
+}
+
+/*Refund tab form css*/
+.mwb-wrael-gen-section-form .mwb-form-group .mwb-form-group__control .mwb-form-select .mdl-textfield__label,
+.mwb-wrael-gen-section-form .mdc-text-field + .mdc-text-field-helper-line {
+  padding-left: 0;
+  padding-top: 5px;
+}
+
+/*dashboard-sidebar*/
+#adminmenuwrap .dashicons-before img {
+  width: 26px;
+  height: auto;
+}
+
+#adminmenuwrap #adminmenu .submenu-font-size-fix {
+  font-size: 11px;
+}
+
+/*overview*/
+.mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords .mwb-overview__keywords-item .mwb-overview__keywords-card {
+  text-align: center;
+}
+
+.mwb-section .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords .mwb-overview__keywords-item .mwb-overview__keywords-card .mwb-overview__keywords-text .mwb-overview__keywords-heading {
+  font-size: 22px;
+  line-height: 32px;
+}
+
+.mwb-form-group__breaker {
+  font-size: 25px;
+}
+
+.mwb_admin_order_msg_history_title .mwb_order_heading .reload-icon {
+  width: 30px;
+}
+
+.thumb img {
+  width: 50px;
+}
 
 @media (max-width: 768px){
   .mwb-header-container {
@@ -699,5 +775,28 @@ select {
   .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords .mwb-overview__keywords-item {
     flex: 0 0 50%;
     max-width: 50%;
+  }
+}
+
+@media only screen and (max-width: 1140px){
+  .add_more_rma_policies select,
+.add_more_rma_policies label,
+.add_more_rma_policies input {
+    margin-top: 8px;
+  }
+
+  span.select2.select2-container.select2-container--default {
+    margin-top: 8px;
+  }
+}
+
+@media only screen and (max-width: 520px){
+  .mwb-section .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords {
+    flex-direction: column;
+  }
+
+  .mwb-section .mwb-overview__wrapper .mwb-overview__content .mwb-overview__keywords .mwb-overview__keywords-item {
+    flex: 0 0 100%;
+    max-width: 100%;
   }
 }
