--- a/assets/src/front-end/scss/main.scss
+++ b/assets/src/front-end/scss/main.scss
@@ -3,4 +3,463 @@
     'components/components',
     'layout/layout',
     'pages/page';
-    
+/**
+ * All of the CSS for your public-facing functionality should be
+ * included in this file.
+ */
+
+ .mwb_order_msg_history_container .mwb_reload_messages .reload-icon {
+    width: 30px; 
+}
+
+.mwb_order_msg_sub_container {
+    padding: 30px;
+    border: solid #ccc 1px;
+   overflow-y: auto;
+    min-height: 200px;
+    max-height: 400px;
+}
+/* Order Refund Request Form */
+*, ::after, ::before{
+    box-sizing: border-box;
+}
+
+textarea, input[type=text], 
+input[type=number], 
+input[type=email], input[type=tel], 
+input[type=url], input[type=password], 
+input[type=search], .input-text{
+	background-color: transparent !important;
+	border: 1px solid #ccc !important;
+	box-shadow: none !important;
+    padding: 10px 14px;
+}
+input[type=text]:focus, 
+input[type=number]:focus, 
+input[type=email]:focus, 
+input[type=tel]:focus, 
+input[type=url]:focus, 
+.mwb_order_msg_sub_containerinput[type=password]:focus, 
+input[type=search]:focus, 
+textarea:focus, 
+a:focus, 
+.input-text:focus {
+    outline: none !important;
+}
+label{
+	margin-bottom: 8px;
+	display: inline-block;
+	line-height: 1.2;
+}
+h4{
+    font-size: 18px !important;
+}
+.mwb_rma_flex{
+	display: flex;
+	flex-wrap: wrap;
+}
+select {
+    padding: 10px 14px;
+}
+.mwb_rma_refund_form_wrapper input[type=text]:focus, 
+.mwb_rma_refund_form_wrapper input[type=number]:focus, 
+.mwb_rma_refund_form_wrapper input[type=email]:focus, 
+.mwb_rma_refund_form_wrapper input[type=tel]:focus, 
+.mwb_rma_refund_form_wrapper input[type=url]:focus, 
+.mwb_rma_refund_form_wrapper input[type=password]:focus, 
+.mwb_rma_refund_form_wrapper input[type=search]:focus, 
+.mwb_rma_refund_form_wrapper textarea:focus, 
+.mwb_rma_refund_form_wrapper .input-text:focus {
+    background-color: transparent;
+}
+.mwb_rma_refund_form_wrapper .mwb-rma-subject__dropdown select {
+    padding: 5px 105px 5px 5px;
+    border-radius: 0;
+    width: 100%;
+}
+.mwb_rma_refund_form_wrapper .mwb_rma_other_subject input {
+    width: 100%;
+}
+.mwb-rma-product__table { 
+    border-collapse: collapse;
+    width: 100%;
+    min-width: 665px;
+}
+.mwb-rma-form__wrapper h2.woocommerce-column__title {
+    font-weight: 600;
+}
+.mwb_rma_refund_form_wrapper select#mwb_rma_return_request_subject:focus-visible{
+	outline: none;
+}
+.mwb_rma_refund_form_wrapper select#mwb_rma_return_request_subject option{
+	box-shadow: none;
+}
+.mwb-rma-product__table-wrapper{
+    overflow-x: auto;
+    padding: 0 15px;
+}
+.mwb_rma_refund_form_wrapper .mwb_rma_product_title{
+    padding: 0 15px;
+}
+.mwb_rma_refund_form_wrapper .mwb_rma_refund_request__row {
+    justify-content: space-between;
+}
+.mwb_rma_refund_form_wrapper .mwb_rma__column {
+    width: 100%;
+}
+.mwb-rma-form__wrapper.mwb-rma-form__wrapper {
+    border: 1px solid #333333;
+}
+.mwb-rma-form__wrapper .mwb-rma-form__header {
+    background-color: #333333;
+}
+.mwb-rma-form__wrapper h1 {
+    font-size: 24px;
+    color: #ffffff;
+    font-weight: 500;
+    text-align: left;
+    padding: 10px 15px;
+    margin-top: 0;
+}
+.mwb-rma-form__wrapper td,
+.mwb-rma-form__wrapper th {
+    border: 1px solid #cccccc;
+    text-align: center;
+    vertical-align: middle;
+    padding: 15px;
+}
+.mwb-rma-form__wrapper th {
+    color: #333333;
+}
+.mwb-rma-form__wrapper .mwb-rma-product__wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.mwb-rma-form__wrapper .mwb-rma__product-title {
+    margin-left: 20px;
+    text-align: left;
+}
+.mwb-rma-product__table tbody td {
+    background-color: #ffffff;
+}
+table.mwb-rma-product__table:not( .has-background ) tbody td {
+    background-color: #ffffff;
+}
+table.mwb-rma-product__table:not( .has-background ) tbody tr:nth-child(2n) td, fieldset, fieldset legend {
+    background-color: #ffffff;
+}
+.mwb-rma-form__wrapper .mwb-rma-row__pd {
+    padding: 0 15px;
+}
+.mwb-rma-form__wrapper .mwb-rma-col {
+    width: 100%;
+}
+.mwb-rma-form__wrapper .mwb-rma-col.mwb_rma_flex {
+    justify-content: flex-end;
+}
+.mwb-rma-form__wrapper .mwb_rma_other_subject {
+    margin: 25px 0;
+}
+.mwb_rma_attach_files {
+    margin-top: 10px;
+}
+.mwb-rma-subject__dropdown {
+    margin-top: 25px;
+}
+.mwb-rma-form__wrapper textarea {
+    width: 100%;
+}
+.mwb-rma-form__wrapper .product-quantity input {
+    height: 48px;
+    margin: 0 auto;
+    width: 197px;
+}
+.mwb-rma-form__wrapper th:last-child,
+.mwb-rma-form__wrapper td:last-child {
+    padding-right: 15px; 
+}
+.mwb-rma-form__wrapper td.product-total {
+    text-align: center;
+}
+/* View Order Messages */
+.mwb-order-msg-attachment-wrapper {
+    margin-top: 20px;
+    justify-content: space-between;
+    align-items: center;
+}
+.mwb-order-attachment input#mwb_order_msg_attachment{
+    max-width: 230px;
+}
+#mwb_order_msg_submit {
+    background: #374585;
+    border: 1px solid #374585;
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    margin: 0;
+    padding: 6px 30px;
+    cursor: pointer;
+    border-radius: 3px;
+}
+form#mwb_order_new_msg_form{
+    margin-bottom: 40px;
+}
+.mwb_rma_order_msg_wrapper .mwb-order-msg-attachment-wrapper label{
+	color: #000000;
+}
+.mwb_rma_order_msg_wrapper h4.mwb-order-heading.mwb_rma_flex{
+    align-items: center;
+}
+.mwb_rma_order_msg_wrapper h4.mwb-order-heading.mwb_rma_flex a{
+    margin-left: 20px;
+    width: 18px;
+}
+.mwb-order-msg__row{
+    padding: 30px 30px 30px 0;
+    margin-bottom: 30px;
+    border: 1px solid #dddddd;
+    background-color: #ffffff;
+    width: auto;
+    word-wrap: break-word;
+}
+.mwb_order_msg_sender{
+    font-weight: 600;
+    font-size: 18px;
+    background-color: #4f62b9;
+    color: #fff;
+    padding: 8px 52px 8px 30px;
+    position: relative;
+    line-height: 1.8;
+    display: inline-block;
+}
+span.mwb_order_msg_sender:after {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    height: 100%;
+    background-color: transparent;
+    border-top: 24px solid #ffffff;
+    border-left: 24px solid transparent;
+    border-right: 24px solid transparent;
+    transform: rotate(90deg);
+    width: 0;
+}
+.mwb_order_msg_date {
+    display: block;
+    margin-top: 10px;
+    padding-left: 30px;
+    color: #1f1f1f;
+}
+.mwb_order_msg_attach_container {
+    padding-left: 30px;
+}
+.mwb_order_msg_detail_container{
+    padding: 20px 0 20px 30px;
+}
+img.mwb_order_msg_attachment_thumbnail {
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+.mwb_rma_order_msg_wrapper h4{
+    background-color: #dadada;
+    padding: 7px 15px;
+    font-weight: 600 !important;
+    color: #1f1f1f !important;
+    line-height: 1.6;
+}
+.mwb-order-attachment input:focus{
+    outline: none;
+}
+.mwb-order-msg__row{
+    border-color: #dddddd;
+} 
+.mwb-order-msg__row:last-child{
+    margin-bottom: 0;
+}
+.mwb_order_msg_sender_details.mwb_rma_flex{
+    justify-content: space-between;
+    align-items: center;
+}
+.mwb_order_msg_notice_wrapper {
+    color: #fff;
+    border-radius: 5px;
+    display: none;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 5px 15px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.mwb_order_msg_notice_wrapper p{
+    margin-bottom: 0;
+    color: #fff;
+}
+a.mwb_order_send_msg_dismiss{
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+}
+.mwb_order_msg_sent_notice{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+}
+.mwb_order_msg_sub_container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.mwb-order-msg__row {
+    width: 100%;
+    max-width: calc(50% - 10px);
+}
+.mwb-order-msg__row:nth-child(2n-1) {
+    margin-right: 10px;
+}
+.mwb-order-msg__row:nth-child(2n) {
+    margin-left: 10px;
+}
+.wmb-order-admin__msg-container .mwb_order_msg_sender {
+    background-color: #71b02f;
+}
+.mwb_rma_order_msg_wrapper textarea {
+    width: 100%;
+}
+
+/*media-query*/
+@media only screen and (max-width: 820px) {
+    .mwb-order-msg__row {
+        max-width: 100%;
+    }
+    .mwb-order-msg__row:nth-child(2n-1),
+    .mwb-order-msg__row:nth-child(2n) {
+        margin-right: 0;
+    }
+}
+@media only screen and (min-width: 600px) {
+    .mwb-rma-refund-request__row {
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .mwb-rma-form__wrapper .mwb-rma-col:nth-child(2) {
+        padding-left: 30px;
+        width: 60%;
+    }
+    .mwb_rma_refund_form_wrapper .mwb_rma__column-right {
+        margin-left: 40px;
+        max-width: calc(40% - 40px);
+        justify-content: flex-end;
+    }
+    .mwb-rma-form__wrapper .mwb-rma-col:nth-child(2) p {
+        max-width: 220px;
+        margin-left: auto;
+    }
+}
+@media only screen and (max-width: 480px){
+    .mwb_order_msg_sub_container{
+        padding: 15px;
+    }
+    .mwb-order-msg__row{
+        padding: 15px 15px 15px 0;
+    }
+    .mwb_order_msg_attach_container{
+        padding-left: 15px;
+    }
+    .mwb_order_msg_detail_container{
+        padding: 15px 0 15px 15px;
+    }
+    .mwb_order_msg_attach_container{
+        padding-left: 15px;
+    }
+    .mwb-rma-form__wrapper textarea{
+        height: 150px !important;
+    }
+}
+@media only screen and (max-width: 375px){
+    .mwb-order-msg-attachment-wrapper.mwb_rma_flex {
+        display: block;
+    }
+}
+
+div.mwb_order_msg_single_attachment a .mwb_order_msg_attachment_thumbnail {
+    border: 1px solid black;
+    border-radius: 3px;
+    max-width: 60px;
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5px;
+}
+
+div.mwb_order_msg_single_attachment a .mwb_order_msg_attachment_thumbnail{
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
+.mwb_rma_return_notification > img {
+    left: 48%;
+    position: absolute;
+    top: 45%;
+    width: 5%;
+}
+.mwb_rma_return_notification, .mwb_rma_exchange_notification{
+    display:none;
+    color: green;
+}
+.mwb_rma_return_notification > img, .mwb_rma_exchange_notification > img{
+    left: 48%;
+    position: absolute;
+    top: 45%;
+    width: 5%;
+}
+.mwb_rma_return_notification, .mwb_rma_exchange_notification {
+    background-color: #000000;
+    bottom: 0;
+    height: 100%;
+    opacity: 0.50;
+    padding: 0;
+    position: fixed;
+    right: 0;
+    width: 100%;
+    z-index: 99999;
+}
+.mwb_rma_return_notification_checkbox::after {
+    background: rgba(255, 255, 255, 0.60) none repeat scroll 0 0;
+    bottom: 0;
+    content: "";
+    height: 100%;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+}
+.mwb_rma_return_notification_checkbox img {
+    left: 0;
+    margin: 0 auto;
+    position: absolute;
+    right: 0;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 99999999;
+}
+.mwb_rma_return_notification_checkbox {
+    display: none;
+}
+#mwb_rma_return_request_container {
+    text-align: center;
+}
+.return, .view_msg {
+    margin-top: 4px;
+}
+.mwb_rma_refund_request__row {
+    padding: 0 15px;
+}
+.mwb_rma_customer_detail {
+    padding: 30px 15px;
+    overflow: hidden;
+}
